--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
-    <script type="application/javascript">
-        console.log('Hello word');
-    </script>
-<script src="js/main.js"></script>
+    <title>titulo</title>
+    <script src="js/Exercise1.js"></script>
+
+<link href="css/style.css" rel="stylesheet" media="screen">
 
 </head>
 <body>
-My app ...
+<div id="wrapper">
+    <h1><img src="css/images/logo.jpg" width="378" height="126" alt="Logo" /><img src="images/spray.jpg" width="37" height="5" alt="Spray" id="spray" /></h1>
+    <div id="body-left">
+        <ul id="menu">
+            <li><a href="javascript:doOperations();">Exercise1</a></li>
+            <li><a href="#">Planning</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Catalogue</a></li>
+            <li><a href="#">Planning</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    <div id="body-right"> <img src="css/images/piqa.png" width="318" height="318" alt="Pic 1" />
+        <h2 id="h-welcome"><img src="css/images/h_welcome.gif" width="134" height="28" alt="H Welcome" /></h2>
+        <div id="copyright"> &copy; Copyright 2015 | designed by Daneiva Gamboa</div>
+    </div>
+</div>
 </body>
 </html>
