--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>titulo</title>
     <script src="js/Exercise1.js"></script>
+    <script src="js/dataTypes.js"></script>
 
 <link href="css/style.css" rel="stylesheet" media="screen">
 
@@ -14,14 +15,9 @@
     <div id="body-left">
         <ul id="menu">
             <li><a href="javascript:doOperations();">Exercise1</a></li>
-            <li><a href="#">Planning</a></li>
+            <li><a href="javascript:printDate();">printDate</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Catalogue</a></li>
-            <li><a href="#">Planning</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+
         </ul>
     </div>
     <div id="body-right"> <img src="css/images/piqa.png" width="318" height="318" alt="Pic 1" />
