--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul id="menu">
             <li><a href="javascript:doOperations();">Exercise1</a></li>
             <li><a href="javascript:printDate();">printDate</a></li>
+            <li><a href="javascript:controlStructure();">ControlStructure</a></li>
             <li><a href="#">Services</a></li>
 
         </ul>
