--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>GAME</title>
+    <script src="js/field.js"></script>
 </head>
 <body>
 
