--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="javascript:doOperations();">Exercise1</a></li>
             <li><a href="javascript:printDate();">printDate</a></li>
             <li><a href="javascript:controlStructure();">ControlStructure</a></li>
+            <li><a href="javascript:Functions();">Functions</a></li>
             <li><a href="#">Services</a></li>
 
         </ul>
