--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>GAME</title>
     <script src="js/field.js"></script>
+    <script src="js/ship.js"></script>
 </head>
 <body>
 
