--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -5,6 +5,8 @@
     <title>GAME</title>
     <script src="js/field.js"></script>
     <script src="js/ship.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/Game.js"></script>
 </head>
 <body>
 
