--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>GAME</title>
+    <script src="js/constants.js"></script>
     <script src="js/field.js"></script>
     <script src="js/ship.js"></script>
     <script src="js/player.js"></script>
