--- a/GameBattle/SpecRunner.html
+++ b/GameBattle/SpecRunner.html
@@ -12,6 +12,10 @@
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="js/constants.js"></script>
+  <script src="js/field.js"></script>
+  <script src="js/ship.js"></script>
+  <script src="js/player.js"></script>
   <script src="js/Game.js"></script>
 
   <!-- include spec files here... -->
