--- a/GameBattle/SpecRunner.html
+++ b/GameBattle/SpecRunner.html
@@ -20,6 +20,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/gameSpec.js"></script>
+  <script src="spec/playerSpec.js"></script>
 
 
 </head>
