--- a/GameBattle/SpecRunner.html
+++ b/GameBattle/SpecRunner.html
@@ -21,6 +21,7 @@
   <!-- include spec files here... -->
   <script src="spec/gameSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
+  <script src="spec/fieldSpec.js"></script>
 
 
 </head>
