TEst Cases to Field Class with Jasmine

--- a/GameBattle/SpecRunner.html
+++ b/GameBattle/SpecRunner.html
@@ -22,6 +22,8 @@
   <script src="spec/gameSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
 
+  <script src="spec/fieldSpec.js"></script>
+
 
 </head>
 
