04/20/2015: Add the spec files

--- a/GameBattle/SpecRunner.html
+++ b/GameBattle/SpecRunner.html
@@ -21,7 +21,7 @@
   <!-- include spec files here... -->
   <script src="spec/gameSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
-
+  <script src="spec/shipSpec.js"></script>
   <script src="spec/fieldSpec.js"></script>
 
 
