--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>GAME</title>
+    <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="js/uiGame.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/field.js"></script>
     <script src="js/ship.js"></script>
@@ -21,7 +23,9 @@
             var _ships = _form.elements["ships"].value;
 
             /*Initialize the game*/
-            var _game = new Game(_players,_size,_ships);
+
+            var _game = new UiGame(parseInt(_players),parseInt(_size),parseInt(_ships));
+            $("#main").fadeOut();
             _game.start();
         }
     </script>
@@ -54,6 +58,9 @@
                 </div>
             </form>
             <small>(*) To see the game activity open the browser's console</small>
+        </div>
+        <div id = "field">
+
         </div>
     </div>
     <div id="footer">
