Class Player: work with the control shoot for the uiGame class style.css: add the styles for the "field" div

--- a/GameBattle/index.html
+++ b/GameBattle/index.html
@@ -60,7 +60,8 @@
             <small>(*) To see the game activity open the browser's console</small>
         </div>
         <div id = "field">
-
+            <div id="player0"></div>
+            <div id="player1"></div>
         </div>
     </div>
     <div id="footer">
